-- 1. Create Profiles table (linked to Auth)
CREATE TABLE IF NOT EXISTS public.profiles (
  id UUID REFERENCES auth.users ON DELETE CASCADE PRIMARY KEY,
  email TEXT UNIQUE,
  full_name TEXT,
  avatar_url TEXT,
  role TEXT DEFAULT 'user' CHECK (role IN ('user', 'admin')),
  address TEXT,
  created_at TIMESTAMP WITH TIME ZONE DEFAULT timezone('utc'::text, now()) NOT NULL
);

-- 2. Create Products table
CREATE TABLE IF NOT EXISTS public.products (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name TEXT NOT NULL,
  description TEXT,
  image TEXT,
  price DECIMAL(10,2) NOT NULL,
  category TEXT,
  created_at TIMESTAMP WITH TIME ZONE DEFAULT timezone('utc'::text, now()) NOT NULL
);

-- 3. Create Orders table
-- DROP TABLE IF EXISTS public.orders CASCADE; -- Uncomment this if you still get errors about missing columns
CREATE TABLE IF NOT EXISTS public.orders (
  id UUID DEFAULT gen_random_uuid() PRIMARY KEY,
  user_id UUID REFERENCES auth.users(id) ON DELETE SET NULL,
  items JSONB NOT NULL,
  total_price DECIMAL(10,2) NOT NULL,
  status TEXT DEFAULT 'open' CHECK (status IN ('open', 'ongoing', 'delivered')),
  created_at TIMESTAMP WITH TIME ZONE DEFAULT timezone('utc'::text, now()) NOT NULL
);

-- Enable Row Level Security (RLS)
ALTER TABLE public.profiles ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.products ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.orders ENABLE ROW LEVEL SECURITY;

-- RLS Policies
-- Note: Using DO block to create policies only if they don't exist
DO $$
BEGIN
    -- Drop old recursive policies if they exist
    DROP POLICY IF EXISTS "Public products are viewable by everyone" ON public.products;
    DROP POLICY IF EXISTS "Admins can insert products" ON public.products;
    DROP POLICY IF EXISTS "Admins can update products" ON public.products;
    DROP POLICY IF EXISTS "Admins can delete products" ON public.products;
    DROP POLICY IF EXISTS "Users can view own profile" ON public.profiles;
    DROP POLICY IF EXISTS "Users can update own profile" ON public.profiles;
    DROP POLICY IF EXISTS "Admins can view all profiles" ON public.profiles;
    DROP POLICY IF EXISTS "Users can view own orders" ON public.orders;
    DROP POLICY IF EXISTS "Users can insert own orders" ON public.orders;
    DROP POLICY IF EXISTS "Admins can view all orders" ON public.orders;
    DROP POLICY IF EXISTS "Admins can update order status" ON public.orders;

    -- Create new non-recursive policies
    CREATE POLICY "Public products are viewable by everyone" ON public.products FOR SELECT USING (true);
    
    CREATE POLICY "Admins can insert products" ON public.products FOR INSERT WITH CHECK (
        (auth.jwt() -> 'user_metadata' ->> 'role') = 'admin'
    );

    CREATE POLICY "Admins can update products" ON public.products FOR UPDATE USING (
        (auth.jwt() -> 'user_metadata' ->> 'role') = 'admin'
    );

    CREATE POLICY "Admins can delete products" ON public.products FOR DELETE USING (
        (auth.jwt() -> 'user_metadata' ->> 'role') = 'admin'
    );

    CREATE POLICY "Users can view own profile" ON public.profiles FOR SELECT USING (auth.uid() = id);
    CREATE POLICY "Users can update own profile" ON public.profiles FOR UPDATE USING (auth.uid() = id);

    CREATE POLICY "Admins can view all profiles" ON public.profiles FOR SELECT USING (
        (auth.jwt() -> 'user_metadata' ->> 'role') = 'admin'
    );

    CREATE POLICY "Users can view own orders" ON public.orders FOR SELECT USING (auth.uid() = user_id);
    CREATE POLICY "Users can insert own orders" ON public.orders FOR INSERT WITH CHECK (auth.uid() = user_id);

    CREATE POLICY "Admins can view all orders" ON public.orders FOR SELECT USING (
        (auth.jwt() -> 'user_metadata' ->> 'role') = 'admin'
    );

    CREATE POLICY "Admins can update order status" ON public.orders FOR UPDATE USING (
        (auth.jwt() -> 'user_metadata' ->> 'role') = 'admin'
    );
END
$$;

-- Function to handle new user signup and create a profile automatically
CREATE OR REPLACE FUNCTION public.handle_new_user() 
RETURNS trigger AS $$
BEGIN
  INSERT INTO public.profiles (id, email, full_name, role)
  VALUES (new.id, new.email, new.raw_user_meta_data->>'full_name', 'user')
  ON CONFLICT (id) DO NOTHING;
  
  -- Also update the auth.users metadata to include the role so the app can see it immediately
  UPDATE auth.users SET raw_user_meta_data = jsonb_set(COALESCE(raw_user_meta_data, '{}'::jsonb), '{role}', '"user"') WHERE id = new.id;
  
  RETURN new;
END;
$$ LANGUAGE plpgsql SECURITY DEFINER;

-- Trigger to call the function on signup (Drop if exists first)
DROP TRIGGER IF EXISTS on_auth_user_created ON auth.users;
CREATE TRIGGER on_auth_user_created
  AFTER INSERT ON auth.users
  FOR EACH ROW EXECUTE FUNCTION public.handle_new_user();

-- INSERT INITIAL DUMMY PRODUCTS (Only if table is empty)
INSERT INTO public.products (name, description, image, price, category)
SELECT 'Premium Wireless Headphones', 'High-quality wireless headphones with active noise cancellation.', 'https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&q=80', 149.99, 'Electronics'
WHERE NOT EXISTS (SELECT 1 FROM public.products WHERE name = 'Premium Wireless Headphones');

INSERT INTO public.products (name, description, image, price, category)
SELECT 'Smart Watch Pro', 'Advanced smartwatch with heart rate monitoring and GPS.', 'https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&q=80', 299.99, 'Electronics'
WHERE NOT EXISTS (SELECT 1 FROM public.products WHERE name = 'Smart Watch Pro');

INSERT INTO public.products (name, description, image, price, category)
SELECT 'Portable Bluetooth Speaker', 'Waterproof portable speaker with 360-degree sound.', 'https://images.unsplash.com/photo-1608043152269-423dbba4e7e1?w=400&q=80', 79.99, 'Electronics'
WHERE NOT EXISTS (SELECT 1 FROM public.products WHERE name = 'Portable Bluetooth Speaker');
